force-app/main/default/objects/Depense__c/Depense__c.object-meta.xml
<CustomObject>
    <description>Objet représentant les dépenses de la pharmacie.</description>
    <label>Depense</label>
    <nameField>
        <displayFormat>Depense-{0000}</displayFormat>
        <label>Dépense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Depenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>