force-app/main/default/objects/Depense__c/fields/CategorieDepense__c.field-meta.xml
<CustomField>
    <fullName>CategorieDepense__c</fullName>
    <description>Champs représentant la categorie  de la Depense</description>
    <label>Categorie Depense</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
                <default>true</default>
                <label>Service</label>
            </value>
            <value>
                <fullName>Divers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>