force-app/main/default/objects/Depense__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Champs représentant la date qu&apos;on a effectue la depense</description>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>