force-app/main/default/objects/Depense__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Champs représentant la Description de la Depense</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>