force-app/main/default/objects/Depense__c/fields/MontantDepense__c.field-meta.xml
<CustomField>
    <fullName>MontantDepense__c</fullName>
    <description>Champs représentant le Montant de la Depense effectue</description>
    <label>Montant Depense</label>
    <precision>11</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>