force-app/main/default/objects/Depense__c/fields/MontantPrise__c.field-meta.xml
<CustomField>
    <fullName>MontantPrise__c</fullName>
    <description>Champs représentant le montant Prise comme  emprunte</description>
    <label>Montant Prise</label>
    <precision>11</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>