force-app/main/default/objects/Depense__c/fields/Restant__c.field-meta.xml
<CustomField>
    <fullName>Restant__c</fullName>
    <formula>25</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Restant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>