force-app/main/default/objects/Depense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CategorieDepense__c</columns>
    <columns>Date__c</columns>
    <columns>MontantDepense__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>