force-app/main/default/objects/Depense__c/listViews/Depenses.listView-meta.xml
<ListView>
    <fullName>Depenses</fullName>
    <columns>NAME</columns>
    <columns>CategorieDepense__c</columns>
    <columns>Date__c</columns>
    <columns>MontantDepense__c</columns>
    <filterScope>Mine</filterScope>
    <label>Dépenses</label>
</ListView>