force-app/main/default/objects/Depense__c/listViews/DepensesService.listView-meta.xml
<ListView>
    <fullName>DepensesService</fullName>
    <columns>NAME</columns>
    <columns>CategorieDepense__c</columns>
    <columns>Date__c</columns>
    <columns>MontantDepense__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CategorieDepense__c</field>
        <operation>equals</operation>
        <value>Service</value>
    </filters>
    <label>Dépenses Service</label>
</ListView>